# tower-http-showcase

./: Cargo.toml  README.md  devenv.nix  devenv.yaml  taplo.toml  treefmt.nix
.github/workflows/: ci.yml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  model.rs
crates/client/: Cargo.toml
crates/client/examples/: check_server.rs
crates/client/src/: lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  model.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  delay_iter.rs  lib.rs  main.rs  metrics.rs  middlewares.rs  service.rs  state.rs
crates/server/src/http/: mod.rs  routes.rs
server/: Cargo.toml
server/src/: main.rs
