[workspace]
members = ["crates/client", "crates/api", "crates/server"]
resolver = "2"

# Common workspace metadata.
[workspace.package]
version = "0.0.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"

[workspace.dependencies]
showcase-api = { path = "crates/api", version = "0.0.0" }

axum = "0.8"
eyre = "0.6.12"
http = "1.2.0"
humantime-serde = "1.1.1"
log = { version = "0.4.24", features = ["kv_serde"] }
rand = "0.8.5"
reqwest = "0.12.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structured-logger = "1.0.3"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2" }
tower-http-client = "0.4.1"
