[workspace]
members = ["crates/client", "crates/api", "crates/server"]
resolver = "2"

# Common workspace metadata.
[workspace.package]
version = "0.0.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
showcase-api = { path = "crates/api", version = "0.0.0" }

axum = "0.8"
eyre = "0.6.12"
futures-util = "0.3.31"
headers = "0.4"
http = "1.3"
humantime-serde = "1.1.1"
log = { version = "0.4.27", features = ["kv_serde"] }
rand = "0.9"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structured-logger = "1.0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = [
  "limit",
  "buffer",
  "discover",
  "balance",
] }
tower-http = { version = "0.6.2" }
tower-http-client = "0.5.2"
