[package]
name = "showcase-client"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
showcase-common = { workspace = true }

env_logger = { workspace = true }
eyre = { workspace = true }
http = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "util"] }
tower-http-client = { workspace = true }
