[package]
name = "showcase-server"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
showcase-api = { workspace = true }

axum = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
structured-logger = { workspace = true }
tokio = { workspace = true }
