[package]
name = "showcase-server"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
showcase-api = { workspace = true }

axum = { workspace = true }
eyre = { workspace = true }
future-local-storage = { workspace = true }
headers = { workspace = true }
humantime-serde = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
structured-logger = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
